<resources>
    <string name="app_name">L02-RegistrationForm</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_pass">Password</string>
    <string name="tv_user">Username</string>

    <string name="tv_registration">Registration Form</string>
    <string name="tv_subtitle">Welcome to Adventure Learning Club!</string>
    <string name="tv_full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_studentid">Student ID</string>
    <string name="tv_school">School</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_phone">Phone</string>
    <string name="btn_submit">Submit</string>
</resources>